tests/fixtures/generic_method_constraints.out
info: Typechecking...
error: Could not match types:

        @ __ROOT__/tests/fixtures/generic_method_constraints.rb:3
      3 |  def f[T : Numeric](T x, T y) => T
                     ^^^^^^^ Numeric, with:
        @ (builtin stdlib):###
    ### |    def <(Numeric other) => Boolean; end
                                     ^^^^^^^ Boolean

        - arising from an attempt to match:

        @ __ROOT__/tests/fixtures/generic_method_constraints.rb:3
      3 |  def f[T : Numeric](T x, T y) => T
                                           ^ Numeric, with:
        @ __ROOT__/tests/fixtures/generic_method_constraints.rb:4
      4 |    x < x
             ^^^^^ Boolean

error: Could not match types:

        @ __ROOT__/tests/fixtures/generic_method_constraints.rb:8
      8 |    f(2.0, 3)
               ^^^ Float, with:
        @ __ROOT__/tests/fixtures/generic_method_constraints.rb:8
      8 |    f(2.0, 3)
                    ^ Integer

        - arising from an attempt to match:

        @ __ROOT__/tests/fixtures/generic_method_constraints.rb:3
      3 |  def f[T : Numeric](T x, T y) => T
                                   ^ Float, with:
        @ __ROOT__/tests/fixtures/generic_method_constraints.rb:8
      8 |    f(2.0, 3)
                    ^ Integer
        @ __ROOT__/tests/fixtures/generic_method_constraints.rb:8
      8 |    f(2.0, 3)
             ^^^^^^^^^ in this expression

error: Could not match types:

        @ __ROOT__/tests/fixtures/generic_method_constraints.rb:3
      3 |  def f[T : Numeric](T x, T y) => T
                     ^^^^^^^ Numeric, with:
        @ __ROOT__/tests/fixtures/generic_method_constraints.rb:12
     12 |    f("foo", "bar")
               ^^^^^ String

        - arising from an attempt to match:

        @ __ROOT__/tests/fixtures/generic_method_constraints.rb:3
      3 |  def f[T : Numeric](T x, T y) => T
                     ^^^^^^^ Numeric, with:
        @ __ROOT__/tests/fixtures/generic_method_constraints.rb:3
      3 |  def f[T : Numeric](T x, T y) => T
                 ^ String
        @ __ROOT__/tests/fixtures/generic_method_constraints.rb:3
      3 |  def f[T : Numeric](T x, T y) => T
                 ^^^^^^^^^^^ in this expression
